--- a/src/Material/index.css
+++ b/src/Material/index.css
@@ -12,13 +12,13 @@
 
 .full-body #beginning {
     padding-top: 280px !important;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 45vh;
+    height: 47vh;
     z-index: 1;
     background-color:  #92a1b1;
 }
@@ -81,4 +81,8 @@
 .full-body .main #review-section img {
     margin: 0;
     margin-bottom: -15px;
+}
+
+#review-section a {
+    margin-top: 1em;
 }
