fixed css and changed namecheap DNS settings

--- a/src/Header/index.css
+++ b/src/Header/index.css
@@ -2,7 +2,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    height: 14%;
+    height: 14vh;
     top: 0;
     align-items: center;
     position: fixed;
