--- a/src/Resources/index.css
+++ b/src/Resources/index.css
@@ -1,32 +1,34 @@
 .full-body {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     width: 100%;
     height: 100%;
     margin-bottom: 0;
     background-color: #f5f5f5;
-    padding-bottom: 300px;
+    padding-bottom: 250px;
+    margin-top: 14vh;
 }
 
 .full-body #beginning {
-    padding-top: 280px !important;
+    /* padding-top: 40vh !important; */
     padding-bottom: 20px;
+    /* display: -webkit-flex; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 47vh;
+    /* height: 40vh; */
     z-index: 1;
     background-color:  #92a1b1;
 }
 
 .full-body #beginning  h1
 {
+    padding-top: 8vh;
     color: white;
-    padding-top: 15vh;
     font-family: Arial,Helvetica,sans-serif !important;
     font-weight: 900 !important;
 }
@@ -74,15 +76,13 @@
 .full-body .main #review-section a{
     color: #282727;
     text-decoration: none;
+    display: -webkit-flex;
     display: flex;
     flex-direction: row;
+    margin-top: 1em;
 }
 
 .full-body .main #review-section img {
     margin: 0;
     margin-bottom: -15px;
-}
-
-#review-section a {
-    margin-top: 1em;
 }
